test/functions/jplevyak/scoping/visibility-4.good
visibility-4.chpl:4: error: inheritance is not currently supported for records
visibility-4.chpl:4: note: foo declared as a record here
